--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -9,12 +9,15 @@
   </head>
   <body>
     <h1>Welcome to Tic Tac Toe</h1>
-
+    <h3>Select Game Mode!</h3>
     <span>
-      <button class='reset'>Reset Game!</button>
       <button class='single'>Single Player!</button>
       <button class='double'>Two Player!</button>
     </span>
+
+      <p>
+        <button class='reset'>Reset Game!</button>
+      </p>
 
     <table>
       <tr>
