added some css and some JQuery quirks

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -9,11 +9,14 @@
   </head>
   <body>
     <h1>Welcome to Tic Tac Toe</h1>
-    <h3>Select Game Mode!</h3>
-    <span>
-      <button class='single'>Single Player!</button>
-      <button class='double'>Two Player!</button>
-    </span>
+
+    <div id='modal'>
+      <h3>Select Game Mode!</h3>
+      <span>
+        <button class='single'>Single Player!</button>
+        <button class='double'>Two Player!</button>
+      </span>
+    </div>
 
       <p>
         <button class='reset'>Reset Game!</button>
